css/everyday.css
/* ... */
.percentages {
  margin-left: 6em;
  margin-right: 6em;
  margin: 0 auto;
  margin-bottom: .5em;
}

.results {
  column-count: 4;
  margin-left: 3em;
  margin-right: 3em;
  column-gap: auto;
  column-width: 100%;
}

.user-personas {
  margin-top: 2em;
  margin-bottom: 2em;
}

.persona-one {
  text-align: center;
  width: 30%;
  float: left;
  margin-left: 8em
}

.persona-one h5 {
  text-align: center;
    margin-bottom: 1em;
}

.motivations, .frustrations {
  text-align: left;
}

.name {
  font-size: 1.5em;
  margin-bottom: 0;
}

.persona-two {
  margin-right: 8em;
  text-align: center;
  width: 30%;
  float: right;
}

.persona-two h5 {
  text-align: center;
  margin-bottom: 1em;
}

.emma {
  width: 10em;
  height: 14em;
  border-radius: 20px;
}

.jake {
  width: 10em;
  height: 14em;
  border-radius: 20px;
}

/**BEGIN INFORMATION**/
#information-section {
  overflow: hidden;
  height: auto;
}

.info-subsection-header {
}
.user-flows {
  background-color: rgba(201, 175, 152, 0.1);
}
.example-mvp {
  padding-top: 2em;
  margin: 0 auto;
  text-align: left;
  font-style: italic;
  color: #3A4660;
}

.example-mvp-image {
  margin: 0 auto;
  width: 65%;
  margin-top: 2em;
  margin-left: 15em;
  margin-right: 15em;
  margin-bottom: 2em;
}

.MVP-title {
  margin: 0 auto;
}

.MVP-subtitle {
  font-style: italic;
  color: #3A4660;
  font-weight: bold;
}

.MVP-items li {
  text-align: left;
  list-style: initial;
  margin-left: 20em;
  margin-bottom: 1em;
}

.user-flow-primary-btn {
  display: block;
  width: 250px;
  margin: 0 auto;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  font-size: 1em;
  text-align: center;
  padding: 10px 20px;
  text-decoration: none;
  color: #3A4660;
  border-radius: 8px;
  font-weight: bold;
}

.contact-btns1 a:hover {
  color: #FECB5E;
  text-decoration: underline;
}
/**END INFORMATION**/

/**BEGIN WIREFRAME**/
.wireframe-subtitle {
}

#wireframe-section {
  overflow: hidden;
  height: auto;
  width: 100%;
}

.wireframe-image-one {
  margin: 0 auto;
  width: 50%;
  margin-left: 18em;
  margin-bottom: 2em;
}

.usability-subsection-header {
  background-color: rgba(201, 175, 152, 0.1);
}
/**END WIREFRAME**/

/** VISUAL DESIGN **/
#visual-section {
  overflow: hidden;
  height: auto;
  width: 100%;
}

.color-title {
  margin: 0 auto;
}

.logo-designs {
  margin-left: 22em;
}

.logo-subsection-header {
  margin-bottom: 2em;
}

.logo-image-one, .logo-image-two, .logo-image-three, .logo-image-four {
  border: 1px solid black;
  display: inline-block;
  width: 30%;
}

.color-subsection-header {
  text-align: center;
}

.body-three {
  font-size: 16px;
  margin-top: .5em;
  margin-bottom: .5em;
}

.colors {
  border-radius: 20px;
  padding: 10px;
}

.hifi {
  width: 50%;
  border: .5px;
  border-style: solid;
  margin-left: 18em;
  margin-right: 18em;
}

.desktop-prototype {
  display: inline-block;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  font-size: 1em;
  text-align: center;
  background-color: #3A4660;
  padding: 10px 20px;
  text-decoration: none;
  border: 2px solid #3A4660;
  color: white;
  border-radius: 8px;
  font-weight: bold;
}

.mobile-prototype {
  display: inline-block;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  font-size: 1em;
  text-align: center;
  background-color: #3A4660;
  padding: 10px 20px;
  text-decoration: none;
  border: 2px solid #3A4660;
  color: white;
  border-radius: 8px;
  font-weight: bold;
}

.typo-subsection-header {
  background-color: rgba(201, 175, 152, 0.1);
}

.hifi-subsection-header {
  background-color: rgba(201, 175, 152, 0.1);
  padding-bottom: 2em;
}

.final-subsection-header {
  background-color: rgba(201, 175, 152, 0.1);
}
/** END VISUAL DESIGN **/

/** LESSONS **/
#lessons-section {
  overflow: hidden;
  height: auto;
  margin-bottom: 5em;
}

.lessons-one-title, .lessons-two-title, .lessons-three-title, .changes-title {
  margin: 0 auto;
}

.contact-header {
  text-align: center;
  font-weight: bold;
  text-transform: lowercase;
  color: #758E85;
  margin-bottom: 0;
}

/** LESSONS **/
#lessons-section {
  height: auto;
}

.lessons-one {
  margin-left: 8em;
  width: 38%;
  float: left;
  text-align: center;
  padding: 2em;
}

.lessons-one p {
  margin-top: 1em;
  height: 300px;
}

.lessons-two {
  margin-right: 8em;
  width: 38%;
  float: right;
  text-align: center;
  padding: 2em;
}

.lessons-two p {
  margin-top: 1em;
  height: 300px;
}

.lessons-image {
  width: 2em;
  height: auto;
}
/* ... */

